fix: update kotlin but stay on older gradle